...
  return (
    <View className="flex-1 bg-background">
      {/* TODO: Replace this color background with a proper background image */}
      <View className="flex-1 bg-gradient-to-b from-blue-600 to-blue-800">
        <View className="flex-1 justify-between p-6">
          <View className="pt-4">
            <Text className="text-lg text-white/90">Welcome to Montek</Text>
          </View>
          <View>
            <Text className="mb-6 text-4xl font-extrabold leading-[42px] text-white">
              Better Homes,
              {'\n'}Smarter, For
              {'\n'}Your Finance.
            </Text>
            <Button
              accessibilityLabel="Iniciemos"
              variant={'secondary'}
              title="Iniciemos"
              onPress={openSheet}
              testID="start_on_app"
            />
          </View>
        </View>
      </View>

      <BottomSheet
...
