...
          icon={<Feather name="arrow-right" size={24} color="#fff" />}
          iconPosition="right"
          variant={'secondary'}
        />

        <TouchableOpacity className="py-3" onPress={onBack}>
          <Text className="text-center text-slate-600 font-medium">Volver</Text>
        </TouchableOpacity>
      </Animated.View>
    </ScrollView>
  );
};

